k8s/base/app/saleor/ref/done/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/saleor-backend-tier: "true"
        io.kompose.service: api
    spec:
      containers:
        - env:
            - name: ALLOWED_HOSTS
              value: localhost,api
            - name: DASHBOARD_URL
              value: http://localhost:9000/
            - name: DEFAULT_CHANNEL_SLUG
              valueFrom:
                configMapKeyRef:
                  key: DEFAULT_CHANNEL_SLUG
                  name: common-env
            - name: HTTP_IP_FILTER_ALLOW_LOOPBACK_IPS
              valueFrom:
                configMapKeyRef:
                  key: HTTP_IP_FILTER_ALLOW_LOOPBACK_IPS
                  name: common-env
            - name: HTTP_IP_FILTER_ENABLED
              valueFrom:
                configMapKeyRef:
                  key: HTTP_IP_FILTER_ENABLED
                  name: common-env
            - name: JAEGER_AGENT_HOST
              value: jaeger
          image: ghcr.io/saleor/saleor:3.19
          name: api
          ports:
            - containerPort: 8000
          resources: {}
          stdin: true
          tty: true
          volumeMounts:
            - mountPath: /app/media
              name: saleor-media
      restartPolicy: Always
      volumes:
        - name: saleor-media
          persistentVolumeClaim:
            claimName: saleor-media
status: {}
