k8s/base/app/saleor/ref/done/dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: dashboard
  name: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: dashboard
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: dashboard
    spec:
      containers:
        - image: ghcr.io/saleor/saleor-dashboard:latest
          name: dashboard
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
