k8s/base/app/saleor/ref/done/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: dashboard
  name: dashboard
spec:
  ports:
    - name: "9000"
      port: 9000
      targetPort: 80
  selector:
    io.kompose.service: dashboard
status:
  loadBalancer: {}
