k8s/base/app/saleor/ref/done/saleor-backend-tier-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: saleor-backend-tier
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/saleor-backend-tier: "true"
  podSelector:
    matchLabels:
      io.kompose.network/saleor-backend-tier: "true"
